--- a/locales/en.json
+++ b/locales/en.json
@@ -17,5 +17,6 @@
 	"Coinbase Transactions": "Coinbase Transactions",
 	"Distributed Blockchain": "Distributed Blockchain",
 	"Blockchain By Viral Patel": "Blockchain By Viral Patel",
-	"₹​": "₹​"
+	"₹​": "₹​",
+	"WEED420 Explorer": "WEED420 Explorer"
 }
