--- a/locales/en.json
+++ b/locales/en.json
@@ -18,5 +18,6 @@
 	"Distributed Blockchain": "Distributed Blockchain",
 	"Blockchain By Viral Patel": "Blockchain By Viral Patel",
 	"₹​": "₹​",
-	"WEED420 Explorer": "WEED420 Explorer"
+	"WEED420 Explorer": "WEED420 Explorer",
+	"Weed Tokens": "Weed Tokens"
 }
